QP-2016 Only run publish command for master builds

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,5 +10,7 @@ build:
 
 publish:
   stage: publish
+  only:
+    - master
   script:
-  - node node_modules/grunt-cli/bin/grunt publish
+    - node node_modules/grunt-cli/bin/grunt publish
