--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "author": "LogisticsQuotingandPlanning@cimpress.com",
   "description": "A simple client for TRDLNK's Fulfillment Location service",
   "license": "Apache-2.0",
-  "dependencies": {
-      
-  },
+  "dependencies": {},
   "scripts": {
     "test": "mocha --recursive tests",
     "check-cover": "nyc check-coverage",
@@ -20,6 +18,7 @@
     "babel-plugin-istanbul": "^4.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
+    "chai": "^4.1.2",
     "cross-env": "^5.0.1",
     "eslint": "^4.2.0",
     "eslint-html-reporter": "^0.5.2",
