--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,23 @@
+variables:
+  VERSION: "0.1.${CI_JOB_ID}"
+  PACKAGE_NAME: "fulfillment-location-service"
+  PACKAGE_TAR: "${PACKAGE_NAME}-{VERSION}.tgz"
+
+.node: &node-common
+  image: node:boron
+  before_script:
+    - npm install
+  cache:
+    paths:
+      - node_modules/
+.python: &py-common
+  image: python:latest
+  before_script:
+    - pip install awscli
+  cache:
+    paths:
+      - pip-cache
+
 image: node:boron
 before_script:
   - npm install
@@ -10,20 +30,28 @@ stages:
   - build
   - publish
 
+test:
+  <<: *node-common
+  stage: test
+  script:
+    - npm run code-check
+    - npm run cover
+
 build:
+  <<: *node-common
   stage: build
   artifacts:
     name: "${CI_JOB_NAME}_${CI_COMMIT_REF_NAME}"
     paths:
       - dist/
   script:
-    - npm run code-check
-    - npm run cover
     - node node_modules/grunt-cli/bin/grunt build
+    - node node_modules/grunt-cli/bin/grunt prepublish
 
 publish:
+  <<: *py-common
   stage: publish
   only:
     - master
   script:
-    - node node_modules/grunt-cli/bin/grunt publish
+    - aws s3 cp .dist/$PACKAGE_TAR s3://msw-lqp-deploy/$PACKAGE_NAME/$packageTar --acl public-read
