QP-2016 Add missing $ sign for variable in GitLab CI config file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 variables:
   VERSION: "0.1.${CI_JOB_ID}"
   PACKAGE_NAME: "fulfillment-location-service"
-  PACKAGE_TAR: "${PACKAGE_NAME}-{VERSION}.tgz"
+  PACKAGE_TAR: "${PACKAGE_NAME}-${VERSION}.tgz"
 
 .node: &node-common
   image: node:boron
