QP-2016 Fix variable issue

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  VERSION: "0.1.${CI_JOB_ID}"
+  VERSION: 0.1.$CI_JOB_ID
   PACKAGE_NAME: "fulfillment-location-service"
   PACKAGE_TAR: "${PACKAGE_NAME}-${VERSION}.tgz"
 
@@ -54,4 +54,4 @@ publish:
   only:
     - master
   script:
-    - aws s3 cp .dist/$PACKAGE_TAR s3://msw-lqp-deploy/$PACKAGE_NAME/$packageTar --acl public-read
+    - aws s3 cp .dist/$PACKAGE_TAR s3://msw-lqp-deploy/$PACKAGE_NAME/$PACKAGE_TAR --acl public-read
