QP-2016 (Try to) Fix how env variable is accessed (again)
If at first you don't succeed, try, try, try again.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  VERSION: "0.1.$${CI_JOB_ID}"
+  VERSION: "0.1.$CI_JOB_ID"
   PACKAGE_NAME: "fulfillment-location-service"
   PACKAGE_TAR: "${PACKAGE_NAME}-${VERSION}.tgz"
 
