QP-2016 Fixing variable in publish stage, again
Never gonna give you up

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
 variables:
-  VERSION: "0.1.$CI_JOB_ID"
   PACKAGE_NAME: "fulfillment-location-service"
-  PACKAGE_TAR: "${PACKAGE_NAME}-${VERSION}.tgz"
+  PACKAGE_TAR: "${PACKAGE_NAME}-0.1.${CI_JOB_ID}.tgz"
 
 .node: &node-common
   image: node:boron
