--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fulfillment-location-client",
-  "version": "0.0.1",
+  "version": "0.1",
   "author": "LogisticsQuotingandPlanning@cimpress.com",
   "description": "A simple client for TRDLNK's Fulfillment Location service",
   "license": "Apache-2.0",
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "babel-plugin-istanbul": "^4.1.4",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-register": "^6.24.1",
     "chai": "^4.1.2",
     "cross-env": "^5.0.1",
