Fixes: * Change package name to be consistent with repo name * Fix repo URL in package.json * Make sure deployed package is babelified

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ script:
 - npm run code-check
 - npm run cover
 - grunt build
+before_deploy:
+- cd dist
 deploy:
   provider: npm
   skip_cleanup: true
