--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "fulfillment-location-client",
-  "version": "0.1",
+  "name": "cimpress-fulfillment-location",
+  "version": "0.0.1",
   "author": "LogisticsQuotingandPlanning@cimpress.com",
-  "description": "A simple client for TRDLNK's Fulfillment Location service",
+  "description": "A simple client for the Cimpress Fulfillment Location service",
   "license": "Apache-2.0",
   "engines": {
     "node": "6.11.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://cimpress.githost.io/qp/fulfillment-location-client.git"
+    "url": "https://github.com/Cimpress/cimpress-fulfillment-location"
   },
   "dependencies": {
     "axios": "^0.16.2",
